# pam-param-param-opilki

./: README.md  pyproject.toml
docs/: task.md  todo.md
src/config/: settings.py  urls.py
src/products/: backends.py  models.py  types.py  urls.py  views.py
src/products/api/: filtersets.py  serializers.py  urls.py  viewsets.py
src/products/management/commands/: parse_wb.py
src/products/migrations/: 0001_initial.py
src/products/sdk/wb/: file_sdk.py  helpers.py  types.py  web_sdk.py
src/products/sdk/wb/files/: boots.json
src/products/services/: events.py  interfaces.py  parser.py  product_updater.py
src/products/static/css/: app.css
src/products/templates/products/: base.html  chart.html  product_list.html
src/products/templates/products/partials/: charts.html  filterset.html  product_table.html
src/utils/event_bus/: __init__.py  types.py
