[project]
name = "wb-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-htmx>=1.23.1",
    "djangorestframework>=3.16.0",
    "drf-spectacular[sidecar]>=0.28.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-filter-stubs>=0.1.3",
    "django-stubs[compatible-mypy]>=5.2.1",
    "djangorestframework-stubs[compatible-mypy]>=3.16.0",
    "ipython>=9.3.0",
    "ruff>=0.12.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
